# formualizer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  WORK_ROADMAP.md  mise.toml  package.json  repomix-output.xml  test_range_view.rs
bindings/python/: .gitignore  Cargo.toml  README.md  formualizer.pyi  manifest.yaml  pyproject.toml  stubtest_allowlist.txt
bindings/python/examples/: custom_function_registration.py
bindings/python/formualizer/: __init__.py  __init__.pyi  _mypy_smoke.py  formualizer_py.pyi  recalculate.py  visitor.py
bindings/python/scripts/: build-pyodide-wheel.sh  pyodide-smoke.mjs  pyodide-smoke.py  smoke-pyodide-wheel.sh
bindings/python/src/: ast.rs  engine.rs  enums.rs  errors.rs  lib.rs  parser.rs  reference.rs  resolver.rs  sheet.rs  sheetport.rs  token.rs  tokenizer.rs  value.rs  workbook.rs
bindings/python/tests/: conftest.py  run_e2e.py  test_cell_budget.py  test_coordinate_validation.py  test_custom_function_registration.py  test_cycle_config.py  test_cycle_telemetry.py  test_date_arithmetic_openpyxl.py  test_date_serial_openpyxl.py  test_e2e_openpyxl.py  test_edit_propagation_calamine.py  test_eval_plan.py  test_formula_printing.py  test_index_openpyxl.py  test_public_module_exports.py  test_pyodide_host_defaults.py  test_recalculate_file.py  test_recalculate_file_extensive.py  test_resource_errors.py  test_sheetport_session.py  test_sumifs_calamine.py  test_workbook_bytes.py
bindings/wasm/: .npmignore  Cargo.toml  README.md  build.sh  package.json  pnpm-lock.yaml  tsconfig.json
bindings/wasm/.cargo/: config.toml
bindings/wasm/examples/: custom-function-registration.mjs
bindings/wasm/src/: ast.rs  dialect.rs  errors.rs  index.ts  lib.rs  parser.rs  reference.rs  sheetport.rs  token.rs  tokenizer.rs  utils.rs  workbook.rs
bindings/wasm/tests/: wasm.rs
crates/formualizer/: Cargo.toml  README.md
crates/formualizer-bench-core/: Cargo.toml  README.md
crates/formualizer-bench-core/examples/: repro_cross_sheet.rs  repro_if_short_circuit.rs  repro_intermixed_family.rs  repro_literal_per_row.rs  repro_named_range_update.rs  repro_s029_isolated.rs  repro_sumifs_variants.rs  repro_whole_col_vs_finite.rs
crates/formualizer-bench-core/src/: c6_calibration.rs  corpus.rs  lib.rs  parity_harness.rs  result.rs  scenario.rs
crates/formualizer-bench-core/tests/: parity_harness_smoke.rs
crates/formualizer-cffi/: Cargo.toml
crates/formualizer-cffi/include/: formualizer_cffi.h
crates/formualizer-cffi/src/: lib.rs  parse.rs  workbook.rs
crates/formualizer-cffi/tests/: abi_test.rs  cffi_smoke.c  ffi_guardrails.rs  workbook_open_xlsx.rs
crates/formualizer-common/: Cargo.toml  README.md
crates/formualizer-common/src/: address.rs  coord.rs  coord_hash.rs  date_serial.rs  error.rs  function.rs  lib.rs  range.rs  value.rs
crates/formualizer-eval/: Cargo.toml  README.md
crates/formualizer-eval/benches/: interval_tree_bench.rs
crates/formualizer-eval/examples/: recalc_quadratic.rs
crates/formualizer-eval/src/: args.rs  coercion.rs  function.rs  function_contract.rs  function_registry.rs  instant.rs  interpreter.rs  lib.rs  locale.rs  map_ctx.rs  planner.rs  reference.rs  registry.rs  rng.rs  stripes.rs  telemetry.rs  test_workbook.rs  timezone.rs  traits.rs  window_ctx.rs
crates/formualizer-eval/tests/: fp8_ingest_pipeline_parity.rs
crates/formualizer-io/: Cargo.toml
crates/formualizer-io/src/: lib.rs  loader.rs  resolver.rs  traits.rs
crates/formualizer-io/tests/: calamine_deltas.rs  calamine_formulas.rs  calamine_large.rs  calamine_offsets.rs  common.rs  compressed_range_demand.rs  it_calamine.rs  json_backend.rs  json_date_system_engine.rs  session_scaffold.rs  test_loader.rs  test_traits.rs  test_utils.rs  transactions.rs  umya_formulas.rs  umya_large.rs  umya_roundtrip.rs  umya_save.rs  umya_write.rs
crates/formualizer-macros/: Cargo.toml  README.md
crates/formualizer-macros/src/: lib.rs
crates/formualizer-parse/: Cargo.toml  README.md
crates/formualizer-parse/src/: lib.rs  parser.rs  pretty.rs  structured_ref.rs  tokenizer.rs  types.rs
crates/formualizer-parse/tests/: parser_differential.rs  tokenizer_best_effort_integration.rs
crates/formualizer-sheetport/: Cargo.toml  README.md
crates/formualizer-sheetport/src/: batch.rs  binding.rs  context.rs  error.rs  layout.rs  lib.rs  resolver.rs  runtime.rs  session.rs  validation.rs  value.rs
crates/formualizer-sheetport/tests/: io.rs  runtime.rs
crates/formualizer-testkit/: Cargo.toml  README.md
crates/formualizer-testkit/src/: fp_coverage.rs  lib.rs  xlsx.rs
crates/formualizer-workbook/: Cargo.toml  README.md
crates/formualizer-workbook/examples/: custom_function_registration.rs  wasm_plugin_attach_dir.rs  wasm_plugin_inspect_attach_bind.rs  wasm_plugin_inspect_catalog.rs
crates/formualizer-workbook/src/: builtins.rs  calc_pr.rs  error.rs  experimental_fzcp.rs  lib.rs  load_limits.rs  loader.rs  recalculate.rs  resolver.rs  session.rs  traits.rs  wasm_runtime_wasmtime.rs  workbook.rs  worksheet.rs
crates/formualizer-workbook/tests/: bulk_edit_dirty.rs  changelog_batch_old_state.rs  common.rs  compressed_range_demand.rs  computed_array_aggregates.rs  corpus.rs  csv_backend.rs  custom_functions.rs  cycle_persistence.rs  cycle_runtime_telemetry.rs  cycle_schedule_pinning.rs  experimental_fzcp.rs  formula_plane_changelog_dirty.rs  iterate_corpus_workbook.rs  json_backend.rs  json_date_system_engine.rs  json_row_visibility.rs  large_sheets.rs  load_limits.rs  named_range_engine.rs  named_range_evaluate_cell.rs  spill_circ_teardown.rs  spill_reads.rs  staged_formula_changelog.rs  test_loader.rs  test_traits.rs  transactions.rs  unqualified_ref_sheet_context.rs  wasm_manifest_conformance.rs  wasm_module_registry.rs  wasm_plugin_seam.rs  workbook_engine.rs  workbook_named_ranges.rs  workbook_row_visibility.rs  workbook_subtotal_visibility.rs
crates/formualizer/src/: doc_examples.rs  lib.rs
crates/sheetport-spec/: Cargo.toml  README.md
crates/sheetport-spec/schema/: fio-0.3.json
crates/xtask/: Cargo.toml
(+1222 files in other folders)
