[workspace]
resolver = "2"

members = [
  "crates/formualizer-common",
  "crates/formualizer-parse",
  "crates/formualizer-eval",
  "crates/formualizer-macros",
  "crates/formualizer-workbook",
  "bindings/python",
  "bindings/wasm"
]

[workspace.package]
homepage = "https://github.com/psu3d0/formualizer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/psu3d0/formualizer"
