[workspace]
resolver = "2"

members = [
  "crates/formualizer-common",
  "crates/formualizer-parse",
  "crates/formualizer-eval",
  "crates/formualizer-macros",
  "crates/formualizer-workbook",
  "bindings/python",
  "bindings/wasm",
  "crates/sheetport-spec",
  "crates/formualizer-sheetport",
  "crates/formualizer",
]

[workspace.package]
homepage = "https://github.com/psu3d0/formualizer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/psu3d0/formualizer"


[workspace.dependencies]

formualizer-common = { version = "0.1.0", path = "crates/formualizer-common" }
formualizer-macros = { version = "0.1.0", path = "crates/formualizer-macros" }
formualizer-parse = { version = "0.1.0", path = "crates/formualizer-parse" }
formualizer-eval = { version = "0.1.0", path = "crates/formualizer-eval" }

chrono = "0.4.41"
serde = "1.0.228"
serde_json = "1.0.142"
serde_yaml = "0.9.34"
schemars = "1.0.4"
semver = "1.0.26"
regex = "1.11.1"
clap = "4.5.48"
anyhow = "1.0.100"
thiserror = "2.0.17"
