[package]
name = "formualizer-python"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "formualizer_py"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable engine/IO tracing spans from the Python wheel/venv build.
# Usage:
#  - maturin develop --release --features tracing
#  - maturin develop --release --features tracing,tracing_chrome
tracing = ["formualizer-eval/tracing", "formualizer-workbook/tracing"]
tracing_chrome = ["tracing", "formualizer-eval/tracing_chrome"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "chrono"] }
formualizer-parse = { path = "../../crates/formualizer-parse" }
formualizer-common = { path = "../../crates/formualizer-common" }
formualizer-eval = { path = "../../crates/formualizer-eval" }
formualizer-workbook = { path = "../../crates/formualizer-workbook", features = ["calamine"] }
formualizer-sheetport = { path = "../../crates/formualizer-sheetport" }
sheetport-spec = { path = "../../crates/sheetport-spec" }
chrono = { workspace = true }
serde_json = { workspace = true }
