[package]
name = "formualizer-python"
version = "0.4.2"
edition = "2024"
homepage = "https://github.com/PSU3D0/formualizer"
license = "MIT OR Apache-2.0"
description = "PyO3 bindings for the Formualizer spreadsheet engine"
readme = "README.md"
repository = "https://github.com/PSU3D0/formualizer"
documentation = "https://pypi.org/project/formualizer/"
keywords = ["spreadsheet", "excel", "formula", "python", "parser"]
categories = ["api-bindings", "mathematics"]
[lib]
name = "formualizer_py"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable engine/IO tracing spans from the Python wheel/venv build.
# Usage:
#  - maturin develop --release --features tracing
#  - maturin develop --release --features tracing,tracing_chrome
tracing = ["formualizer/tracing"]
tracing_chrome = ["tracing", "formualizer/tracing_chrome"]

[dependencies]
pyo3 = { workspace = true, features = ["chrono", "abi3-py310"] }
formualizer = { path = "../../crates/formualizer", default-features = false, features = ["eval", "workbook", "sheetport", "parse", "calamine", "umya"] }
chrono = { workspace = true }
serde_json = { workspace = true }
pyo3-stub-gen = "0.18.0"
