[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "formualizer"
version = "0.3.5"
description = "Embeddable spreadsheet engine — parse, evaluate & mutate Excel workbooks at native speed"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["spreadsheet", "excel", "formula", "evaluation", "parser", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/psu3d0/formualizer"
Repository = "https://github.com/psu3d0/formualizer"
"Bug Tracker" = "https://github.com/psu3d0/formualizer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "openpyxl"
]

[tool.maturin]
# Keep Rust crate/module named `formualizer_py`, but install it under the
# public Python package `formualizer` to avoid top-level module conflicts.
module-name = "formualizer.formualizer_py"
# Mark as mixed Rust/Python layout so stub generation can place `__init__.pyi`
# into the correct package directory.
python-source = "."
features = ["pyo3/extension-module", "pyo3/abi3-py310"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    # Generated by `cargo run --bin stub_gen`
    "formualizer/__init__.pyi",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "SIM105",
    "F401",
    "F403",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["formualizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=formualizer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["formualizer"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["formualizer.formualizer_py"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
