[package]
name = "formualizer-wasm"
version = "0.4.1"
edition = "2024"
authors = ["Formualizer Contributors"]
homepage = "https://github.com/PSU3D0/formualizer"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for the Formualizer workbook + formula engine"
readme = "README.md"
repository = "https://github.com/PSU3D0/formualizer"
documentation = "https://docs.rs/formualizer-wasm"
categories = ["wasm", "parsing", "spreadsheet"]
keywords = ["excel", "formula", "parser", "wasm", "webassembly"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1", optional = true }
formualizer = { path = "../../crates/formualizer", default-features = false, features = ["eval", "workbook", "sheetport", "parse", "json"] }
serde_json = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_panic", "json"]
console_panic = ["console_error_panic_hook"]
# Expose a local `json` feature and forward it to the workbook dependency
json = ["formualizer/json"]

# Ensure getrandom works on wasm32-unknown-unknown by enabling the `js` feature.
# Most of the dependency graph still pulls getrandom 0.2 via rand, so we
# enable the feature for that version explicitly.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom 0.3 is pulled in via arrow/ahash; it needs both the feature flag
# and the cfg backend selection to compile for wasm32-unknown-unknown.
getrandom = { version = "0.3", features = ["wasm_js"] }
# Some transitive deps still pull getrandom 0.2 (via rand/const-random).
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
