[package]
name = "formualizer-wasm"
version = "0.5.5"
edition = "2024"
authors = ["Formualizer Contributors"]
homepage = "https://github.com/PSU3D0/formualizer"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for the Formualizer workbook + formula engine"
readme = "README.md"
repository = "https://github.com/PSU3D0/formualizer"
documentation = "https://docs.rs/formualizer-wasm"
categories = ["wasm", "parsing", "spreadsheet"]
keywords = ["excel", "formula", "parser", "wasm", "webassembly"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1", optional = true }
formualizer = { path = "../../crates/formualizer", default-features = false, features = ["wasm-js", "json"] }
serde_json = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_panic", "json"]
console_panic = ["console_error_panic_hook"]
# Expose a local `json` feature and forward it to the workbook dependency
json = ["formualizer/json"]

# JS runtime (web-time + JS-backed getrandom) is activated transitively via
# formualizer/wasm-js → formualizer-eval/js-runtime. No explicit getrandom
# shims needed here.
