[package]
name = "formualizer-common"
version = "0.1.0"
edition = "2024"
description = "Shared value, reference, function, and error types for the Formualizer spreadsheet engine"
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["excel", "formula", "spreadsheet", "engine", "arrow"]
categories = ["data-structures"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
