[package]
name = "formualizer-eval"
version = "0.1.0"
edition = "2024"
description = "Arrow-backed spreadsheet evaluation engine used by Formualizer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/psu3d0/formualizer"
readme = "README.md"
keywords = ["excel", "formula", "engine", "arrow", "spreadsheet"]
categories = ["data-structures", "mathematics"]

[lints.rust]
unused_variables = "allow"
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"
only_used_in_recursion = "allow"

[dependencies]
formualizer-parse = { path = "../formualizer-parse" }
formualizer-macros  = { path = "../formualizer-macros" }
formualizer-common = { path = "../formualizer-common" }
once_cell = "1.21.3"
rustc-hash = "1.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8"
dashmap = "6.1.0"
chrono = "0.4.41"
bitflags = "2.9.1"
bumpalo = { version = "3.16", features = ["collections"] }
smallvec = "1.13"

# Arrow (per-crate) — pinned to 56.x series
arrow-array = "56"
arrow-buffer = "56"
arrow-schema = "56"
arrow-select = "56"
arrow-cast = "56"
arrow = "56"

[dependencies.tracing]
version = "0.1"
optional = true
default-features = false
features = ["std", "attributes"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
default-features = false
features = ["std", "fmt", "env-filter"]

[dependencies.tracing-chrome]
version = "0.7"
optional = true

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
tracing_chrome = ["tracing", "dep:tracing-chrome"]
