[package]
name = "formualizer-eval"
version = "0.5.5"
edition = "2024"
description = "High-performance Arrow-backed Excel formula engine with dependency graph and incremental recalculation"
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["spreadsheet", "excel", "evaluation", "arrow", "dependency-graph"]
categories = ["data-structures", "mathematics"]

[lints.rust]
unused_variables = "allow"
dead_code = "allow"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(skip_until_transaction_context_impl)']

[lints.clippy]
too_many_arguments = "allow"
only_used_in_recursion = "allow"

[dependencies]
formualizer-parse = { workspace = true }
formualizer-macros  = { workspace = true }
formualizer-common = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
# default-features = false: SmallRng + seeded PRNG only; no OsRng / getrandom at runtime.
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rayon = "1.8"
dashmap = "6.1.0"
# clock feature controlled by the `system-clock` cargo feature below.
chrono = { workspace = true }
bitflags = "2.9.1"
bumpalo = { version = "3.16", features = ["collections"] }
smallvec = { workspace = true }
# web-time is only needed for the js-runtime (browser/wasm-bindgen) profile.
web-time = { workspace = true, optional = true }

# Arrow (per-crate) — pinned to 56.x series
arrow-array = "56"
arrow-buffer = "56"
arrow-schema = "56"
arrow-select = "56"
arrow-cast = "56"
arrow = "56"

[dependencies.tracing]
version = "0.1"
optional = true
default-features = false
features = ["std", "attributes"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
default-features = false
features = ["std", "fmt", "env-filter"]

[dependencies.tracing-chrome]
version = "0.7"
optional = true

# JS entropy shims — only needed for the browser/wasm-bindgen profile.
# For portable raw wasm (wasmtime guests) these are omitted; rand uses SmallRng
# seeded from context and no ambient OsRng calls are made.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
glob = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "interval_tree_bench"
harness = false

[[bench]]
name = "sheet_ops"
harness = false

[features]
# system-clock: enables SystemClock + chrono ambient-time (Local::now / Utc::now).
# Included in default for native + wasm-js consumers; disable for portable wasm guests.
default = ["system-clock"]
system-clock = ["chrono/clock"]

# js-runtime: opt into browser/wasm-bindgen execution environment.
# Activates web-time (performance.now Instant) and JS-backed getrandom entropy.
# Used by the formualizer-wasm binding crate; NOT enabled by default.
js-runtime = ["dep:web-time", "dep:getrandom", "dep:getrandom02"]

tracing = ["dep:tracing", "dep:tracing-subscriber"]
tracing_chrome = ["tracing", "dep:tracing-chrome"]
