[package]
name = "formualizer-io"
version = "0.1.0"
edition = "2021"

[dependencies]
formualizer-core = { path = "../formualizer-core" }
formualizer-common = { path = "../formualizer-common" }
formualizer-eval = { path = "../formualizer-eval" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"

[features]
default = ["json"]
json = ["dep:serde_json"]
calamine = ["dep:calamine"]
umya = ["dep:umya-spreadsheet"]
mmap = ["dep:memmap2"]
io_builtins = []
import_range = ["io_builtins"]
webservice = ["io_builtins", "dep:reqwest"]
pyo3 = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen", "dep:web-sys"]
tracing = ["dep:tracing"]
compression = ["dep:zstd"]
calamine_integration = ["calamine"]
umya_integration = ["umya"]

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.calamine]
version = "0.24"
optional = true

[dependencies.memmap2]
version = "0.9"
optional = true

[dependencies.reqwest]
version = "0.11"
optional = true

[dependencies.pyo3]
version = "0.24"
features = ["abi3-py38"]
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.zstd]
version = "0.13"
optional = true

[dev-dependencies]
tempfile = "3.8"
umya-spreadsheet = { path = "../../umya-spreadsheet", package = "umya-spreadsheet" }

[dependencies.umya-spreadsheet]
path = "../../umya-spreadsheet"
package = "umya-spreadsheet"
optional = true