[package]
name = "formualizer-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros that power Formualizer spreadsheet built-in implementations"
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["excel", "formula", "spreadsheet", "macro"]
categories = ["development-tools::procedural-macro"]

[lib]
proc-macro = true

[dependencies]
syn   = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
formualizer-common = { path = "../formualizer-common" }
