[package]
name = "formualizer-macros"
version = "0.2.0"
edition = "2024"
description = "Procedural macros that power Formualizer spreadsheet built-in implementations"
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["excel", "formula", "spreadsheet", "macro"]

[lib]
proc-macro = true

[dependencies]
syn   = { workspace = true, features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
formualizer-common = { workspace = true }
