[package]
name = "formualizer-parse"
version = "0.1.0"
edition = "2024"
description = "Excel/OpenFormula tokenizer, parser, and pretty-printer for the Formualizer spreadsheet engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/psu3d0/formualizer"
readme = "README.md"
keywords = ["excel", "formula", "parser", "openformula", "tokenizer"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
once_cell = "1.21.3"
formualizer-common = { path = "../formualizer-common" }
smallvec = "1.13"
