[package]
name = "formualizer-parse"
version = "0.1.0"
edition = "2024"
description = "Excel/OpenFormula tokenizer, parser, and pretty-printer for the Formualizer spreadsheet engine"
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["excel", "formula", "parser", "openformula", "tokenizer"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
once_cell = { workspace = true }
formualizer-common = { workspace = true }
smallvec = { workspace = true }
