[package]
name = "formualizer-sheetport"
version = "0.1.0"
edition = "2024"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sheetport-spec = { path = "../sheetport-spec", version = "0.1.0" }
formualizer-workbook = { path = "../formualizer-workbook", version = "0.1.0", features = ["umya_integration"] }
formualizer-common = { path = "../formualizer-common", version = "0.1.0" }
formualizer-parse = { path = "../formualizer-parse", version = "0.1.0" }
formualizer-eval = { path = "../formualizer-eval", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = { workspace = true }
umya-spreadsheet = "2.3.2"
