[package]
name = "formualizer-sheetport"
version = "0.5.1"
edition = "2024"
description = "SheetPort runtime: bind manifests to workbooks, validate IO, and run sessions deterministically"
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["spreadsheet", "excel", "api", "schema", "validation"]
categories = ["data-structures"]

[features]
default = []
umya = ["formualizer-workbook/umya_integration"]

[dependencies]
sheetport-spec = { path = "../sheetport-spec", version = "0.3.0" }
formualizer-workbook = { path = "../formualizer-workbook", version = "0.5.1" }
formualizer-common = { path = "../formualizer-common", version = "1.1.2" }
formualizer-parse = { path = "../formualizer-parse", version = "1.1.2" }
formualizer-eval = { path = "../formualizer-eval", version = "0.5.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

# Enable wasm32-unknown-unknown support for getrandom (pulled in transitively
# via arrow → ahash → getrandom 0.3, and rand → getrandom 0.2).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
chrono = { workspace = true }
formualizer-testkit = { path = "../formualizer-testkit" }
tempfile = { workspace = true }
formualizer-workbook = { path = "../formualizer-workbook", version = "0.5.1", features = ["umya_integration"] }
umya-spreadsheet = "=2.3.2"
