[package]
name = "formualizer-workbook"
version = "0.1.0"
edition = "2021"
description = "Workbook abstraction and IO adapters built on the Formualizer spreadsheet engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/psu3d0/formualizer"
readme = "README.md"
keywords = ["excel", "formula", "workbook", "engine", "spreadsheet"]
categories = ["data-structures"]

[dependencies]
formualizer-parse = { path = "../formualizer-parse" }
formualizer-common = { path = "../formualizer-common" }
formualizer-eval = { path = "../formualizer-eval" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
chrono = "0.4"
once_cell = "1.19"
rustc-hash = "1.1"

[features]
default = ["json"]
json = ["dep:serde_json"]
calamine = ["dep:calamine"]
umya = ["dep:umya-spreadsheet"]
mmap = ["dep:memmap2"]
io_builtins = []
import_range = ["io_builtins"]
webservice = ["io_builtins", "dep:reqwest"]
pyo3 = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen", "dep:web-sys"]
tracing = ["dep:tracing"]
compression = ["dep:zstd"]
calamine_integration = ["calamine"]
umya_integration = ["umya"]

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.calamine]
version = "0.24"
optional = true

[dependencies.memmap2]
version = "0.9"
optional = true

[dependencies.reqwest]
version = "0.11"
optional = true

[dependencies.pyo3]
version = "0.24"
features = ["abi3-py38"]
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.zstd]
version = "0.13"
optional = true

[dev-dependencies]
tempfile = "3.8"
umya-spreadsheet = "2.3.2"

[[test]]
name = "calamine"
path = "tests/calamine/mod.rs"
required-features = ["calamine"]

[[test]]
name = "umya"
path = "tests/umya/mod.rs"
required-features = ["umya"]

[dependencies.umya-spreadsheet]
version = "2.3.2"
package = "umya-spreadsheet"
optional = true
