[package]
name = "formualizer-workbook"
version = "0.4.2"
edition = "2024"
description = "Ergonomic workbook API over the Formualizer engine (sheets, loaders, staging, undo/redo)"
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["spreadsheet", "excel", "workbook", "xlsx", "undo-redo"]
categories = ["data-structures", "mathematics"]

[dependencies]
formualizer-parse = { workspace = true }
formualizer-common = { workspace = true }
formualizer-eval = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
csv = { version = "1.3.1", optional = true }
parking_lot = "0.12"
chrono = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
zip = { version = "0.6.6", default-features = false, features = ["deflate"], optional = true }

[features]
default = ["json", "csv"]
json = ["dep:serde_json", "formualizer-common/serde"]
csv = ["dep:csv"]
calamine = ["dep:calamine", "dep:zip"]
umya = ["dep:umya-spreadsheet", "dep:zip"]
mmap = ["dep:memmap2"]
io_builtins = []
import_range = ["io_builtins"]
webservice = ["io_builtins", "dep:reqwest"]
tracing = ["dep:tracing"]
compression = ["dep:zstd"]
calamine_integration = ["calamine"]
umya_integration = ["umya"]
wasm_plugins = ["dep:wasmparser", "dep:serde_json", "formualizer-common/serde"]
wasm_runtime_wasmtime = ["wasm_plugins", "dep:wasmtime"]

[dependencies.calamine]
version = "0.24"
optional = true

[dependencies.memmap2]
version = "0.9"
optional = true

[dependencies.reqwest]
version = "0.11"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.zstd]
version = "0.13"
optional = true

[dependencies.wasmparser]
version = "0.240"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wasmtime]
version = "41.0.3"
optional = true

[dev-dependencies]
wasm-encoder = "0.240"
tempfile = { workspace = true }
umya-spreadsheet = "2.3.2"

[[test]]
name = "calamine"
path = "tests/calamine/mod.rs"
required-features = ["calamine"]

[[test]]
name = "umya"
path = "tests/umya/mod.rs"
required-features = ["umya"]

[dependencies.umya-spreadsheet]
version = "2.3.2"
package = "umya-spreadsheet"
optional = true
